@@ -2,13 +2,15 @@ lilv (0.21.1) unstable;
 
   * Fix loading files with spaces in their path
   * Add lilv_file_uri_parse() for correct URI to path conversion
+  * Expose lilv_world_load_specifications() and
+    lilv_world_load_plugin_classes()
   * Tolerate passing NULL to lilv_state_restore()
   * Fix a few minor/unlikely memory errors
   * Configure based on compiler target OS for cross-compilation
   * Windows fixes (thanks John Emmas)
   * Minor documentation improvements
 
- -- David Robillard <d@drobilla.net>  Thu, 29 Jan 2015 17:40:17 -0500
+ -- David Robillard <d@drobilla.net>  Thu, 29 Jan 2015 17:55:31 -0500
 
 lilv (0.20.0) stable;
 
